--- a/demo/package.json
+++ b/demo/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-responsive-masonry": "^2.7.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
